# embedded

./: .gitignore  README.md
archive/: CMakeLists.txt  build.sh
archive/src/: CNN.py  DecisionTreeClassifier.h  SVM.cpp  arbre_foret.py  classifiers.py  flo_main.cpp  main.cpp  model.tflite  svm_lau.py
archive/src/tmp/: myinlinetree  myinlinetree.h
start_svm/__MACOSX/start_svm/: ._disco.00050.au  ._signal.h
start_svm/start_svm/: CMakeLists.txt  main.cpp  start_svm.py
